# ReactEA

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  main.yml  publish.yml
examples/: example.ipynb
examples/config_files/: ES.yaml  GA.yaml  IBEA.yaml  LS.yaml  NSGAII.yaml  NSGAIII.yaml  SA.yaml  SPEA2.yaml
examples/data/: seed_compounds.csv
examples/implementation_examples/: case_studies.ipynb  evaluation_functions.ipynb  terminators.ipynb
src/reactea/: __init__.py  cli.py  constants.py  reactea_cli.py  run_reactea.py
src/reactea/case_studies/: __init__.py  case_study.py  compound_quality.py  sweeteners.py
src/reactea/chem/: __init__.py  chem_utils.py  compounds.py  reaction_rules.py  standardization.py
src/reactea/configs/: example_config.yaml
src/reactea/io_streams/: __init__.py  readers.py  writers.py
src/reactea/optimization/: __init__.py  comparators.py  ea.py  evaluation.py  problem.py  solution.py
src/reactea/standardizers/: __init__.py  standardization.py
src/reactea/utilities/: __init__.py  chem_utils.py  constants.py  io.py
src/reactea/utils/: chem_utils.py  constatns.py  io.py
src/reactea/vizualization/: plot.py  plot_results.py
src/reactea/wrappers/: __init__.py  wrap_case_study.py  wrap_evaluation_function.py
tests/: __init__.py  _utils.py  base_test_cases.py
tests/configs/: base_config.yaml  cli_config.yaml
tests/data/: base_config.yaml
tests/data/compounds/: compounds_sample.tsv
tests/integration_tests/: test_sweet_reactor.py
(+49 files in other folders)
