[metadata]
name = ReactEA
version = 0.1.1-beta
description = ReactEA: Combining Evolutionary Algorithms with Reaction Rules Towards Focused Molecular Design
long_description = file: README.md
long_description_content_type = text/markdown
keywords = evolutionary-algorithms, drug-discovery, reaction-rules
author = João Correia
author_email = jfscorreia95@gmail.com
url = https://github.com/BioSystemsUM/ReactEA
license = GPL-3.0 license
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.7
zip_safe = False
include_package_data = True
install_requires =
    rdkit-pypi==2022.03.1
    numpy==1.21.5
    pandas==1.3.5
    cytoolz==0.11.2
    jmetalpy
    PyYAML==6.0
    matplotlib==3.5.1
    chembl_structure_pipeline

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=7.1.1
    pytest-cov>=3.0.0
    mypy>=0.942
    flake8>=4.0.1
    tox>=3.25.0

[options.package_data]
biocatalyzer = py.typed

[flake8]
max-line-length = 160